[gd_scene load_steps=5 format=3 uid="uid://cccc2nrktl4cv"]

[ext_resource type="Theme" uid="uid://i1ww03hpi0uu" path="res://Recursos/Tema_Menu.tres" id="1_6f3cd"]
[ext_resource type="Script" path="res://Escenas/Menu_Principal.gd" id="1_fl717"]

[sub_resource type="FontFile" id="FontFile_abhka"]
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/17/0/ascent = 0.0
cache/0/17/0/descent = 0.0
cache/0/17/0/underline_position = 0.0
cache/0/17/0/underline_thickness = 0.0
cache/0/17/0/scale = 1.0
cache/0/17/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0
cache/0/18/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/19/0/ascent = 0.0
cache/0/19/0/descent = 0.0
cache/0/19/0/underline_position = 0.0
cache/0/19/0/underline_thickness = 0.0
cache/0/19/0/scale = 1.0
cache/0/19/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/21/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/22/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/23/0/ascent = 0.0
cache/0/23/0/descent = 0.0
cache/0/23/0/underline_position = 0.0
cache/0/23/0/underline_thickness = 0.0
cache/0/23/0/scale = 1.0
cache/0/23/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/25/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/26/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/27/0/ascent = 0.0
cache/0/27/0/descent = 0.0
cache/0/27/0/underline_position = 0.0
cache/0/27/0/underline_thickness = 0.0
cache/0/27/0/scale = 1.0
cache/0/27/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/28/0/ascent = 0.0
cache/0/28/0/descent = 0.0
cache/0/28/0/underline_position = 0.0
cache/0/28/0/underline_thickness = 0.0
cache/0/28/0/scale = 1.0
cache/0/28/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/29/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/31/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/33/0/ascent = 0.0
cache/0/33/0/descent = 0.0
cache/0/33/0/underline_position = 0.0
cache/0/33/0/underline_thickness = 0.0
cache/0/33/0/scale = 1.0
cache/0/33/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/34/0/ascent = 0.0
cache/0/34/0/descent = 0.0
cache/0/34/0/underline_position = 0.0
cache/0/34/0/underline_thickness = 0.0
cache/0/34/0/scale = 1.0
cache/0/34/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/34/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_8sajk"]
font = SubResource("FontFile_abhka")
font_size = 34
outline_size = 4
outline_color = Color(0.443137, 0.345098, 0.172549, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.858824)

[node name="Menu_Principal" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme = ExtResource("1_6f3cd")
script = ExtResource("1_fl717")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -52.5
offset_right = 338.0
offset_bottom = 52.5
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Rise Against"
label_settings = SubResource("LabelSettings_8sajk")
horizontal_alignment = 1

[node name="TextureButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2

[node name="Start_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Settings_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings_Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_Button" to="." method="_on_quit_button_pressed"]
